--- a/iphone/TODO
+++ b/iphone/TODO
@@ -1,2 +1,3 @@
-Cancel button on keyboard when searching for address?
+History browser sort option persistance
 Address search results height
+Google geocoding API key
