Implemented 'curent location'

--- a/iphone/TODO
+++ b/iphone/TODO
@@ -1,4 +1,4 @@
-save last origin and use it to load the app
+slash screen
 logo
 placeholder images
-current location
+do something about the large number of files in the cache directory
